# compile-time-json5

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  ctjson.cppm  ctjson5.cppm
examples/: CMakeLists.txt  Makefile  README.md  config.cpp  cxx17-syntax.cpp  introspection.cpp  iteration.cpp  localization.cpp  python-style.cpp  serialize.cpp  tables.cpp  validation.cpp
include/: ctjson.hpp  ctjson5.hpp
include/ctjson/: actions.hpp  dumps.hpp  json.gram  json.hpp  load.hpp  serialize.hpp  types.hpp
include/ctjson5/: actions.hpp  bind.hpp  dumps.hpp  grammar.hpp  json5.gram  json5.hpp  load.hpp  serialize.hpp  types.hpp  views.hpp
single-header/: ctjson.hpp  ctjson5.hpp
tests/: CMakeLists.txt  cxx17.cpp  document.cpp  dumps.cpp  load.cpp
